# kiro-autonomous-agent-demo

./: .gitignore  Dockerfile  LICENSE  README.md  agent.py  agent_agentcore_custom.py  agent_agentcore_sdk.py  pyproject.toml
.tasks/task-strands-agent-agentcore/: context.json  task.json
.tasks/task-strands-agent-agentcore/features/: FEAT-001.json
deploy/: deploy_agent.py  invoke_agent.py
tests/: test_agent_custom.py  test_tools.py
tools/: __init__.py  calculator.py  weather.py
