[project]
name = "strands-agent-agentcore-demo"
version = "0.1.0"
description = "Sample Strands Agents SDK project deployable to AWS Bedrock AgentCore"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=1.4.3",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "strands-agents>=1.29.0",
    "strands-agents-tools>=0.2.22",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
